--- a/css/styles.css
+++ b/css/styles.css
@@ -8,6 +8,14 @@ body {
 
 img {
     display: block;
+    width: 100%;
+    height: auto;
+}
+
+*,
+*::before,
+*::after {
+    box-sizing: border-box;
 }
 
 .visually-hidden {
@@ -46,9 +54,11 @@ h6 {
 }
 
 .container {
-    width: 1158px;
-    padding: 0 15px;
+    /* width: 1158px;
+    padding: 0 15px; */
     margin: 0 auto;
+    max-width: 320px;
+    padding: 0 16px;
 }
 
 address {
@@ -63,7 +73,7 @@ address {
     letter-spacing: 0.03em;
     text-transform: uppercase;
     color: #4d5ae5;
-    margin-right: 76px;
+    /* margin-right: 76px; */
 }
 
 .Studio {
@@ -75,13 +85,12 @@ address {
     box-shadow: 0px 2px 1px rgba(46, 47, 66, 0.08),
         0px 1px 1px rgba(46, 47, 66, 0.16),
         0px 1px 6px rgba(46, 47, 66, 0.08);
-    ;
+
 }
 
 .header .container {
     display: flex;
-    align-items: center;
-    padding: 0 15px;
+    /* align-items: center; */
 }
 
 .header-menu-list {
@@ -97,6 +106,10 @@ address {
 .header-navigation {
     display: flex;
     align-items: center;
+}
+
+.header-logo {
+    padding: 16px 0;
 }
 
 .header-navigation-menu {
@@ -155,13 +168,209 @@ address {
     color: #404bbf;
 }
 
+.header-navigation-menu,
+.address {
+    display: none;
+}
+
+.mobile-address-list {
+    display: flex;
+    flex-direction: column;
+    gap: 24px;
+    padding: 0;
+    margin: 0;
+    list-style: none;
+}
+
+.menu-btn {
+    display: block;
+    margin-left: auto;
+    background-color: transparent;
+    border: none;
+    cursor: pointer;
+}
+
+.menu-icon {
+    display: block;
+    fill: rgba(47, 47, 55, 1);
+}
+
+.mobile-menu {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: #fff;
+    z-index: 1;
+    opacity: 0;
+    visibility: hidden;
+    pointer-events: none;
+    transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1), visibility 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.mobile-menu.is-open {
+    opacity: 1;
+    visibility: visible;
+    pointer-events: auto;
+}
+
+.menu-information {
+    font-weight: 500;
+    font-size: 20px;
+    line-height: 1.2;
+    letter-spacing: 0.02em;
+    color: #2e2f42;
+}
+
+.mobile-navigation-menu {
+    font-weight: 700;
+    font-size: 36px;
+    line-height: 1.1;
+    letter-spacing: 0.02em;
+    color: #2e2f42;
+}
+
+.mobile-navigation-menu.current {
+    color: #404BBF;
+}
+
+.mobile-navigation-menu:hover,
+.mobile-navigation-menu:focus {
+    color: #404bbf;
+}
+
+.menu-information.current {
+    color: #404BBF;
+}
+
+.mobile-menu-container {
+    position: relative;
+    padding-top: 72px;
+    padding-bottom: 40px;
+    display: flex;
+    flex-direction: column;
+    height: 100%;
+    justify-content: start;
+}
+
+.mobile-menu-list {
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+    gap: 40px;
+    margin-bottom: 50px;
+}
+
+.mobile-information-icons {
+    margin-top: auto;
+    display: flex;
+    flex-direction: column;
+    gap: 24px;
+    align-items: flex-start;
+    padding-left: 0;
+}
+
+.mobile-social-link {
+    width: 40px;
+    height: 40px;
+}
+
+.mobile-social-items {
+    height: 100%;
+    width: 100%;
+    background-color: #4d5ae5;
+    border-radius: 50%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.mobile-social-list {
+    display: flex;
+    justify-content: center;
+    gap: 40px;
+    margin-top: 48px;
+    padding-left: 0;
+}
+
+.mobile-social-items:hover,
+.mobile-social-items:focus {
+    background-color: #31D0AA;
+}
+
+.overlay {
+    height: 100%;
+    width: 100%;
+    background-color: rgba(46, 47, 66, 0.4);
+    position: fixed;
+    top: 0;
+    opacity: 0;
+    visibility: hidden;
+    pointer-events: none;
+    transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1), visibility 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.mobile-close {
+    background-color: #e7e9fc;
+    border-radius: 50%;
+    stroke-width: 1px;
+    border: 1px solid rgba(0, 0, 0, 0.1);
+    position: absolute;
+    top: 24px;
+    right: 24px;
+    height: 24px;
+    width: 24px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    padding: 0;
+    cursor: pointer;
+    transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1), border 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.mobile-close:hover,
+.mobile-close:focus {
+    background-color: #404bbf;
+    fill: #ffffff;
+    border: none;
+}
+
+.mobile-close-icone {
+    transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.mobile-menu-list {
+    display: flex;
+    gap: 16px;
+    justify-content: flex-start;
+    flex-wrap: wrap;
+}
+
+.mobile-address {
+    display: flex;
+}
+
+.menu-information {
+    color: #434455;
+    transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.menu-information:hover,
+.menu-information:focus {
+    color: #404bbf;
+}
+
 /* Main */
 
 .hero {
     background: #2e2f42;
-    background-image: linear-gradient(rgba(46, 47, 66, 0.7), rgba(46, 47, 66, 0.7)), url(../images/header-bc.jpg);
-    padding-top: 188px;
-    padding-bottom: 188px;
+    background-image:
+        linear-gradient(rgba(46, 47, 66, 0.7), rgba(46, 47, 66, 0.7)),
+        url(../images/Dark-bg-mob-1x-min.jpg);
+    padding-top: 72px;
+    padding-bottom: 72px;
     max-width: 1440px;
     background-repeat: no-repeat;
     background-position: center;
@@ -169,16 +378,24 @@ address {
     margin: 0 auto;
 }
 
+@media screen and (min-resolution: 2x) {
+    .hero {
+        background-image:
+            linear-gradient(rgba(46, 47, 66, 0.7), rgba(46, 47, 66, 0.7)),
+            url(../images/Dark-bg-mob-2x-min.jpg);
+    }
+}
+
 .hero-title {
     font-weight: 700;
-    font-size: 56px;
-    line-height: 1.07;
+    font-size: 36px;
+    line-height: 1.1;
     letter-spacing: 0.02em;
     text-align: center;
     color: #FFFFFF;
-    max-width: 496px;
+    max-width: 216px;
     margin: 0 auto;
-    margin-bottom: 48px;
+    margin-bottom: 72px;
 }
 
 .hero-btn {
@@ -189,7 +406,6 @@ address {
     color: #fff;
     background-color: #4D5AE5;
     cursor: pointer;
-    margin-bottom: 188px;
     display: block;
     margin: 0 auto;
     min-width: 169px;
@@ -207,8 +423,8 @@ address {
 }
 
 .hero-features {
-    padding-top: 120px;
-    padding-bottom: 120px;
+    padding-top: 96px;
+    padding-bottom: 96px;
 }
 
 .Features {
@@ -228,7 +444,7 @@ address {
     background-color: #F4F4FD;
     height: 112px;
     width: 264px;
-    display: flex;
+    display: none;
     justify-content: center;
     align-items: center;
     border: 1px solid #8E8F99;
@@ -238,32 +454,37 @@ address {
 
 .hero-list {
     display: flex;
-    gap: 24px;
-}
-
-.hero-items {
-    width: calc((100% - 72px) / 4);
+    flex-wrap: wrap;
+    gap: 72px;
 }
 
 .hero-list-title {
-    font-weight: 500;
-    font-size: 20px;
-    line-height: 1.2;
-    letter-spacing: 0.02em;
     color: #2e2f42;
-
+    font-weight: 700;
+    font-size: 36px;
+    line-height: 40px;
+    letter-spacing: 0.02em;
+    text-align: center;
+    padding-bottom: 8px;
 }
 
 .hero-list-text {
+    /* font-size: 16px;
+    line-height: 1.5;
+    letter-spacing: 0.02em; */
+    color: #434455;
+    font-weight: 500;
     font-size: 16px;
     line-height: 1.5;
     letter-spacing: 0.02em;
-    color: #434455;
+
 }
 
 .our-team {
-    padding-top: 120px;
-    padding-bottom: 120px;
+    /* padding-top: 120px;
+    padding-bottom: 120px; */
+    padding-top: 96px;
+    padding-bottom: 96px;
     background-color: #F4F4FD;
 }
 
@@ -280,10 +501,9 @@ address {
 
 .team-items {
     background-color: #FFFFFF;
-    width: calc((100% - 72px) / 4);
+    /* width: calc((100% - 72px) / 4); */
     border-radius: 0px 0px 4px 4px;
     box-shadow: 0 2px 1px 0 rgba(46, 47, 66, 0.08), 0 1px 1px 0 rgba(46, 47, 66, 0.16), 0 1px 6px 0 rgba(46, 47, 66, 0.08);
-
 }
 
 .team-list-title {
@@ -342,12 +562,18 @@ address {
 
 .team-list {
     display: flex;
-    gap: 24px;
+    /* gap: 24px; */
+    gap: 72px;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
 }
 
 .portfolio {
-    padding-top: 120px;
-    padding-bottom: 120px;
+    /* padding-top: 120px;
+    padding-bottom: 120px; */
+    padding-top: 96px;
+    padding-bottom: 96px;
 }
 
 .portfolio-title {
@@ -372,14 +598,14 @@ address {
 }
 
 .portfolio-items {
-    width: calc((100% - 48px) / 3);
+    /* width: calc((100% - 48px) / 3); */
+    box-shadow: 0px 1px 6px 0px rgba(46, 47, 66, 0.08);
     transition: box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .portfolio-thumb {
     position: relative;
     overflow: hidden;
-
 }
 
 .portfolio-thumb img {
@@ -460,8 +686,12 @@ address {
     letter-spacing: 0.03em;
     text-transform: uppercase;
     color: #4d5ae5;
-    display: inline-block;
+    /* display: inline-block; */
     margin-bottom: 16px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+
 }
 
 .footer {
@@ -484,24 +714,29 @@ address {
 
 .footer-container {
     display: flex;
-    justify-content: flex-start;
-    align-items: baseline;
+    /* justify-content: flex-start;
+    align-items: baseline; */
+    flex-wrap: wrap;
+    justify-content: center;
+    align-items: center;
 }
 
 .footer-left {
-    margin-right: 120px;
-    max-width: 264px;
+    /* margin-right: 120px;
+    max-width: 264px; */
+    margin-bottom: 72px;
 }
 
 .footer-right {
-    display: flex;
-    flex-direction: column;
+    /* display: flex;
+    flex-direction: column; */
 
 }
 
 .social-list.foot {
     gap: 16px;
-    margin-top: 0;
+    /* margin-top: 0; */
+    padding-bottom: 72px;
 }
 
 .social-title {
@@ -511,6 +746,9 @@ address {
     letter-spacing: 0.02em;
     color: #ffffff;
     margin-bottom: 16px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
 
 .footer-social-link {
@@ -536,7 +774,7 @@ address {
 }
 
 .footer-form-right {
-    margin-left: 80px;
+    /* margin-left: 80px; */
 }
 
 .form-title {
@@ -546,15 +784,19 @@ address {
     letter-spacing: 0.02em;
     color: #ffffff;
     margin-bottom: 16px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
 
 .footer-form {
-    display: flex;
-    gap: 24px;
+    /* display: flex;
+    gap: 24px; */
 }
 
 .form-lable-input {
-    width: 264px;
+    /* width: 264px; */
+    width: 288px;
     height: 40px;
     vertical-align: middle;
     background: transparent;
@@ -564,9 +806,9 @@ address {
     font-size: 12px;
     line-height: 2;
     letter-spacing: 0.04em;
-    padding-left: 16px;
     box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
     color: #ffffff;
+    margin-bottom: 16px;
 }
 
 .form-lable-input::placeholder {
@@ -593,6 +835,7 @@ address {
     align-items: center;
     justify-content: center;
     cursor: pointer;
+    margin: 0 auto;
 }
 
 .footer-form-icon {
@@ -706,8 +949,8 @@ address {
 }
 
 .modal {
-    width: 408px;
-    min-height: 584px;
+    width: 288px;
+    min-height: 623px;
     background-color: #FCFCFC;
     border-radius: 4px;
     position: absolute;
@@ -715,7 +958,7 @@ address {
     top: 50%;
     left: 50%;
     transform: translate(-50%, -50%);
-    padding: 72px 24px 24px 24px;
+    padding: 72px 16px 16px 16px;
     box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.14),
         0px 1px 3px rgba(0, 0, 0, 0.12),
         0px 2px 1px rgba(0, 0, 0, 0.2);
@@ -757,6 +1000,8 @@ address {
 }
 
 .checkbox-text {
+    display: flex;
+    align-items: center;
     font-weight: 400;
     font-size: 12px;
     line-height: 1.17;
@@ -777,6 +1022,7 @@ address {
 
 .check-elements {
     display: inline-flex;
+    flex-shrink: 0;
     width: 16px;
     height: 16px;
     border: 1px solid rgba(46, 47, 66, 0.4);
@@ -818,4 +1064,237 @@ address {
 .modal-send:hover,
 .modal-send:focus {
     background-color: #404BBF;
+}
+
+@media screen and (min-width: 768px) {
+    .container {
+        max-width: 768px;
+    }
+
+    .hero {
+        background-image:
+            linear-gradient(rgba(46, 47, 66, 0.7), rgba(46, 47, 66, 0.7)),
+            url(../images/Dark-bg-tab-1x-min.jpg);
+        padding-top: 112px;
+        padding-bottom: 112px;
+    }
+
+    @media screen and (min-resolution: 2x) {
+        .hero {
+            background-image:
+                linear-gradient(rgba(46, 47, 66, 0.7), rgba(46, 47, 66, 0.7)),
+                url(../images/Dark-bg-tab-2x-min.jpg);
+        }
+    }
+
+    .hero-title {
+        font-size: 56px;
+        line-height: 1.07;
+        max-width: 496px;
+        margin-bottom: 36px;
+    }
+
+    .mobile-menu {
+        display: none;
+    }
+
+    .header-navigation-menu {
+        display: flex;
+    }
+
+    .header-logo {
+        padding: 24px 0;
+        margin-right: 120px;
+    }
+
+    .address {
+        font-weight: 400;
+        font-size: 16px;
+        line-height: 1.5;
+        letter-spacing: 0.02em;
+        color: #2e2f42;
+        display: flex;
+        align-items: center;
+        gap: 12px;
+    }
+
+    .address-list {
+        display: inline;
+        gap: 12px;
+    }
+
+    .menu-btn {
+        display: none;
+    }
+
+    .hero-list {
+        gap: 72px 24px;
+    }
+
+    .hero-items {
+        width: calc((100% - 24px) / 2);
+    }
+
+    .hero-list-text,
+    .hero-list-title {
+        text-align: left;
+    }
+
+    .team-list {
+        display: flex;
+        flex-wrap: wrap;
+        flex-direction: row;
+        gap: 64px 24px;
+    }
+
+    .portfolio-list {
+        display: flex;
+        flex-wrap: wrap;
+        gap: 72px 24px;
+    }
+
+    .portfolio-items {
+        width: calc((100% - 24px) / 2);
+    }
+
+    .footer-logo {
+        display: inline-block;
+    }
+
+    .footer-container {
+        display: flex;
+        align-items: baseline;
+        justify-content: flex-start;
+        padding-left: 108px;
+        gap: 24px;
+    }
+
+    .social-title {
+        display: flex;
+        justify-content: flex-start;
+    }
+
+    .footer-form {
+        display: flex;
+        gap: 24px;
+    }
+
+    .footer-form-right {
+        display: inline-block;
+    }
+
+    .form-title {
+        display: flex;
+        justify-content: flex-start;
+    }
+
+    .modal {
+        width: 408px;
+        height: 584px;
+        padding: 72px 24px 24px 24px;
+    }
+}
+
+@media screen and (min-width: 1158px) {
+    .container {
+        max-width: 1158px;
+        padding: 0 15px;
+    }
+
+    .hero {
+        background-image:
+            linear-gradient(rgba(46, 47, 66, 0.7), rgba(46, 47, 66, 0.7)),
+            url(../images/people-office-deck-bg-1x-min.jpg);
+        padding-top: 188px;
+        padding-bottom: 188px;
+    }
+
+    @media screen and (min-resolution: 2x) {
+        .hero {
+            background-image:
+                linear-gradient(rgba(46, 47, 66, 0.7), rgba(46, 47, 66, 0.7)),
+                url(../images/people-office-deck-bg-2x-min.jpg);
+        }
+    }
+
+    .hero-title {
+        margin-bottom: 48px;
+    }
+
+    .mobile-menu {
+        display: none;
+    }
+
+    .header-logo {
+        margin-right: 76px;
+    }
+
+    .address-list {
+        display: flex;
+        gap: 40px;
+    }
+
+    .hero-features {
+        padding-top: 120px;
+        padding-bottom: 120px;
+    }
+
+    .container-icon {
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        height: 112px;
+        width: 264px;
+        background-color: #F4F4FD;
+        border: 1px solid #8E8F99;
+        border-radius: 4px;
+        margin-bottom: 8px;
+    }
+
+    .hero-list {
+        display: flex;
+        gap: 24px;
+        flex-wrap: wrap;
+    }
+
+    .hero-items {
+        width: calc((100% - 72px) / 4);
+    }
+
+    .hero-list-title {
+        font-weight: 500;
+        font-size: 20px;
+        line-height: 1.2;
+        letter-spacing: 0.02em;
+        color: #2e2f42;
+    }
+
+    .hero-list-text {
+        font-weight: 400;
+        font-size: 16px;
+        line-height: 1.5;
+        letter-spacing: 0.02em;
+        color: #2e2f42;
+    }
+
+    .portfolio-items {
+        width: calc((100% - 48px) / 3);
+        box-shadow: none;
+    }
+
+    .footer-container {
+        display: flex;
+    }
+
+    .footer-right {
+        padding-left: 100px;
+    }
+
+    .footer-form-right {
+        padding-left: 50px;
+    }
+
+    .form-lable-input {
+        width: 264px;
+    }
 }
